test/corpus/list.txt
================================================================================
Empty List
================================================================================

()

--------------------------------------------------------------------------------

(source
  (list))

================================================================================
List with Keywords
================================================================================

(:a :b :c)

--------------------------------------------------------------------------------

(source
  (list
    (keyword)
    (keyword)
    (keyword)))
